--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     </section>
     
-    <section id="experience" style= "background-color: #FF7A3F;">
+    <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container" style="display: grid; gap: 20px;">
@@ -183,8 +183,7 @@
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> Atlanta, Georgia, USA -
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> August 2023 – Present
                 </h5>
-                <p>Technology Stack: React, TypeScript, Redux, Spring Boot, Spring Data JPA, PostgreSQL, AWS (EC2, S3), OAuth 2.0, JWT,
-Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
+                <p>Technology Stack: React, TypeScript, Redux, Spring Boot, Spring Data JPA, PostgreSQL, AWS (EC2, S3), OAuth 2.0, JWT, Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
   
                 <p>
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
@@ -295,8 +294,7 @@ Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> India
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> May 2021 - August 2021
                 </h5>
-                <p><strong>Technology Stack:</strong> React, TypeScript, Redux, Node.js, Express, MongoDB, PostgreSQL, AWS (Lambda, EC2, S3, RDS),
-                  Docker, OAuth 2.0, JWT, Webpack, Jest, JUnit, Jenkins, Git, Terraform.
+                <p><strong>Technology Stack:</strong> React, TypeScript, Redux, Node.js, Express, MongoDB, PostgreSQL, AWS (Lambda, EC2, S3, RDS), Docker, OAuth 2.0, JWT, Webpack, Jest, JUnit, Jenkins, Git, Terraform.
                 </p>
                 <br /><br />
                 <p>
@@ -519,7 +517,7 @@ Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
     </section>
     <footer>
       <div class="c">
-      <p >Copyright &#169; 2023 Tharun D. All Rights Reserved.</p>
+      <p >Copyright &#169; 2024 Tharun D. All Rights Reserved.</p>
     </div>
     </footer>
     <script src="script.js"></script>
