--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> Atlanta, Georgia, USA -
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> August 2023 – Present
                 </h5>
-                <p>Technology Stack: React, TypeScript, Redux, Spring Boot, Spring Data JPA, PostgreSQL, AWS (EC2, S3), OAuth 2.0, JWT, Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
+                <p>Technology Stack:</strong> React, TypeScript, Redux, Spring Boot, Spring Data JPA, PostgreSQL, AWS (EC2, S3), OAuth 2.0, JWT, Webpack, JUnit, Jest, Jenkins, Git.<p/> <br /> <br />
   
                 <p>
                   <i class="fa-sharp fa-solid fa-star-of-life fa-2xs"></i> 
