--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <h2><i class="fa-solid fa-briefcase"></i></h2>
                 <h5>
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> Walmart Global Tech India,
-                  <i class="square-icon fa-solid fa-square fa-2xs"></i> India 
+                  <i class="square-icon fa-solid fa-square fa-2xs"></i> India -
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> July 2022 - December 2022
                 </h5>
                 <p>
@@ -291,7 +291,7 @@
                 <h2><i class="fa-solid fa-briefcase"></i></h2>
                 <h5>
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> Ebox,
-                  <i class="square-icon fa-solid fa-square fa-2xs"></i> India
+                  <i class="square-icon fa-solid fa-square fa-2xs"></i> India -
                   <i class="square-icon fa-solid fa-square fa-2xs"></i> May 2021 - August 2021
                 </h5>
                 <p><strong>Technology Stack:</strong> React, TypeScript, Redux, Node.js, Express, MongoDB, PostgreSQL, AWS (Lambda, EC2, S3, RDS), Docker, OAuth 2.0, JWT, Webpack, Jest, JUnit, Jenkins, Git, Terraform.
@@ -334,7 +334,7 @@
     
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title project-title-gap">Projects</h1>
+      <h1 class="title project-title-gap"> Academic Projects</h1>
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <!-- Project One -->
