--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/THARUN-DERANGULA-RESUME.pdf')"
+            onclick="window.open('./assets/Tharun-Derangula-Resume.pdf')"
           >
-          <span style="color: black;">Download CV</span>
+          <span style="color: white;">Download CV</span>
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
