--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <style>
   #desktop-nav {
-    position: fixed; /* Keep the navbar fixed */
+    position: absolute; /* Keep the navbar fixed */
     top: 0;
     left: 0;
     width: 100%;
