--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </div>
           </div>
     
-          <div class="details-container" style="flex: 1; padding: 20px; margin-right: 50px; background-color: #96E6B3; border-radius: 30px;">
+          <div class="details-container" style="flex: 1; padding: 20px; margin-right: 50px; background-color: #FFFFFC; border-radius: 30px;">
             <h2 class="experience-sub-title1" style="margin: 0;">Software Engineer</h2><br /><br />
             <div class="article-container">
               <div class="container-fluid">
