--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project1/'"
+                    onclick="location.href='https://tharund7.github.io/natours-tour-booking-website/'"
                   >
                     Live Demo
                   </button>
@@ -386,7 +386,7 @@
                           </button>
                           <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://tharund7.github.io/Project2/'"
+                            onclick="location.href='https://tharund7.github.io/trillo-hotel-booking-website/'"
                           >
                             Live Demo
                           </button>
@@ -415,7 +415,7 @@
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/Project2/'"
+                    onclick="location.href='https://tharund7.github.io/nexter-realtors-website/'"
                   >
                     Live Demo
                   </button>
@@ -433,7 +433,7 @@
                     class="project-img"
                   />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Project Four</h2>
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
@@ -443,7 +443,7 @@
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://tharund7.github.io/project-4/'"
+                    onclick="location.href='https://tharund7.github.io/glowing-website/'"
                   >
                     Live Demo
                   </button>
