--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     </section>
     
-    <section id="experience" Style="background-color: #ffffff;">
+    <section id="experience" Style="background-color: #D7F9FF;">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container" style="display: grid; gap: 20px;">
